[package]
name = "rust-servo"
version = "0.1.1"
edition = "2021"
description = "A simple servo engine written rust."
license = "MIT"
repository = "https://github.com/franklee26/rust-servo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
